JeevanRakshak/force-app/main/default/objects/AI_Log__c/AI_Log__c.object-meta.xml
<CustomObject>
    <label>AI Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>