JeevanRakshak/force-app/main/default/objects/AI_Log__c/fields/AI_Prediction__c.field-meta.xml
<CustomField>
    <fullName>AI_Prediction__c</fullName>
    <label>AI Prediction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>