JeevanRakshak/force-app/main/default/objects/AI_Log__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition</label>
    <referenceTo>Emergency_Case__c</referenceTo>
    <relationshipLabel>AI Logs (Condition)</relationshipLabel>
    <relationshipName>AI_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>