JeevanRakshak/force-app/main/default/objects/AI_Log__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>App Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>