JeevanRakshak/force-app/main/default/objects/AI_Log__c/fields/Suggested_Action__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action__c</fullName>
    <label>Suggested Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>