JeevanRakshak/force-app/main/default/objects/AI_Log__c/validationRules/AI_Suggestion_must_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>AI_Suggestion_must_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Suggested_Action__c )</errorConditionFormula>
    <errorMessage>AI Suggestion cannot be empty</errorMessage>
</ValidationRule>