JeevanRakshak/force-app/main/default/objects/AI_Log__c/validationRules/Emergency_Case_must_be_linked.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Case_must_be_linked</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Emergency_Case__c)</errorConditionFormula>
    <errorMessage>Link AI Log to an Emergency Case</errorMessage>
</ValidationRule>