JeevanRakshak/force-app/main/default/objects/AI_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Emergency_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>